# sync

./: .gitignore  Dockerfile  pyproject.toml  startup.py
.github/workflows/: autotag.yaml
gutenbergpy/: gutenbergcache.py  gutenbergcachesettings.py  settings.py  textget.py  utils.py
gutenbergpy/caches/: mongodbcache.py
gutenbergpy/parse/: author.py  book.py  parsers.py  rdfparser.py
sync/: gutenbergcache.py  settings.py  utils.py
sync/caches/: mongodbcache.py
sync/parse/: parsers.py  rdfparser.py
