[tool.poetry]
name = "gutenberg_import"
version = "0.1.0"
description = ""
authors = ["Mihai Nueleanu <mihai.nueleanu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
future = "^0.18.2"
pymongo = {extras = ["tls", "srv"], version = "^3.11.3"}
requests = "^2.25.1"
lxml = "^4.6.2"
autopep8 = "^1.5.5"
pydantic = "^1.8.1"
python-dotenv = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
